--- a/app/service/comment/api/Dockerfile
+++ b/app/service/comment/api/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /server
 
 # 将代码复制到容器中
 #COPY etc /server/etc
-COPY ./gohu-comment-api /server/gohu-comment-api
+#COPY ./gohu-comment-api /server/gohu-comment-api
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 
