--- a/app/service/mq/nsq/consumer/Dockerfile
+++ b/app/service/mq/nsq/consumer/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /server
 
 # 将代码复制到容器中
 #COPY etc /server/etc
-COPY ./gohu-mq-nsq-consumer /server/gohu-mq-nsq-consumer
+#COPY ./gohu-mq-nsq-consumer /server/gohu-mq-nsq-consumer
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 
